# make-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO  mcp_servers_config example.json  pyproject.toml  railway.json  run.py  test.ipynb
app/: agent.py  auth.py  bot.py  data_client.py  models.py  tools.py
make_bot/: agent.py  bot.py  chat_history.py  config.py  context_manager.py  prompt_loader.py  run.py  system_prompt.txt
prompts/: expert.txt  orchestrator.txt
