[project]
name = "make-bot"
version = "0.1.0"
description = "Generalized Telegram bot template with PostgreSQL context management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.0.1",
    "pydantic-ai[anthropic,google]>=0.0.14",
    "telegramify-markdown>=0.1.6",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
]