[project]
name = "make-bot"
version = "0.1.0"
description = "Generalized Telegram AI bot template with Pydantic-AI and PostgreSQL for context management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.0.1",
    "pydantic-ai>=0.0.14",
    "telegramify-markdown>=0.1.6",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
]